--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -2,9 +2,7 @@
 layout: default
 img: dog.png
 category: Services
-title: 3D Device Mockups<br>by PSDCovers
+title: Вид на большом экране
 description: |
 ---
-  Turn your 2D designs into high quality, 3D
-  product shots in seconds using free Photoshop actions by [PSDCovers](http://www.psdcovers.com/)! Visit
-  their website to download some of their awesome, free photoshop actions!
+  А на больших экранах ваш Landing Page выгдядит еще лучше. Большие мониторы - это то, от чего мы кайфуем.
